--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,39 @@
-abstract: The great new Cog!
-author: "Ingy d\xC3\xB6t Net, C<< <ingy at cpan.org> >>"
+---
+abstract: 'The Cog Information Application Framework'
+author:
+  - 'Ingy döt Net <ingy@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.61
+generated_by: 'Module::Install version 1.00'
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: Cog
 name: Cog
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
+    - share
     - t
-requires: 
-  perl: 5.6.1
-version: 0.01
+requires:
+  Class::Throwable: 0
+  Convert::Base32: 0
+  Git::Wrapper: 0
+  IO::All: 0
+  IPC::Run: 0
+  Jemplate: 0
+  Mouse: 0
+  Plack: 0
+  Template::Toolkit::Simple: 0
+  Time::Duration: 0
+  Try::Tiny: 0
+  YAML::XS: 0
+  perl: 5.8.3
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/ingydotnet/cog-pm.git
+version: 0.02
