--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'The Cog Information Application Framework'
 author:
   - 'Ingy döt Net <ingy@cpan.org>'
 build_requires:
+  Capture::Tiny: 0
   ExtUtils::MakeMaker: 6.42
 configure_requires:
   ExtUtils::MakeMaker: 6.42
@@ -21,19 +22,21 @@ no_index:
     - t
 requires:
   Class::Throwable: 0
-  Convert::Base32: 0
-  Git::Wrapper: 0
+  Convert::Base32::Crockford: 0
+  File::ShareDir: 0
   IO::All: 0
   IPC::Run: 0
+  JSON: 0
   Jemplate: 0
   Mouse: 0
   Plack: 0
+  Plack::Middleware::Cache: 0
+  Plack::Middleware::ETag: 0
+  Plack::Middleware::ProxyMap: 0
   Template::Toolkit::Simple: 0
-  Time::Duration: 0
-  Try::Tiny: 0
   YAML::XS: 0
   perl: 5.8.3
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/ingydotnet/cog-pm.git
-version: 0.05
+version: 0.06
